Plugins/UnrealDotNet/Source/UnrealDotNetRuntime/Private/Generate/Export/UStaticMeshComponent.h

	DOTNET_EXPORT auto E_UStaticMeshComponent_CanAttachAsChild(UStaticMeshComponent* Self, USceneComponent* ChildComponent, char* SocketName)
	{
		auto _p0 = ChildComponent;
		auto _p1 = ConvertFromManage_FName(SocketName);
		return Self->CanAttachAsChild(_p0, _p1);
	}
	DOTNET_EXPORT auto E_UStaticMeshComponent_DestroyComponent(UStaticMeshComponent* Self, bool bPromoteChildren)
	{
		auto _p0 = bPromoteChildren;
		Self->DestroyComponent(_p0);
	}
	DOTNET_EXPORT auto E_UStaticMeshComponent_DetachFromComponent(UStaticMeshComponent* Self, INT_PTR DetachmentRules)
	{
		auto _p0 = *(FDetachmentTransformRules*)DetachmentRules;
		Self->DetachFromComponent(_p0);
	}
	DOTNET_EXPORT auto E_UStaticMeshComponent_DetachFromParent(UStaticMeshComponent* Self, bool bMaintainWorldPosition, bool bCallModify)
	{
		auto _p0 = bMaintainWorldPosition;
		auto _p1 = bCallModify;
		Self->DetachFromParent(_p0, _p1);
	}
	DOTNET_EXPORT auto E_UStaticMeshComponent_GetSocketLocation(UStaticMeshComponent* Self, char* InSocketName)
	{
		auto _p0 = ConvertFromManage_FName(InSocketName);
		return (INT_PTR) new FVector(Self->GetSocketLocation(_p0));
	}
	DOTNET_EXPORT auto E_UStaticMeshComponent_GetSocketQuaternion(UStaticMeshComponent* Self, char* InSocketName)
	{
		auto _p0 = ConvertFromManage_FName(InSocketName);
		return (INT_PTR) new FQuat(Self->GetSocketQuaternion(_p0));
	}
	DOTNET_EXPORT auto E_UStaticMeshComponent_GetSocketRotation(UStaticMeshComponent* Self, char* InSocketName)
	{
		auto _p0 = ConvertFromManage_FName(InSocketName);
		return (INT_PTR) new FRotator(Self->GetSocketRotation(_p0));
	}
	DOTNET_EXPORT auto E_UStaticMeshComponent_IsAnySimulatingPhysics(UStaticMeshComponent* Self)
	{
		return Self->IsAnySimulatingPhysics();
	}
	DOTNET_EXPORT auto E_UStaticMeshComponent_IsVisible(UStaticMeshComponent* Self)
	{
		return Self->IsVisible();
	}
	DOTNET_EXPORT auto E_UStaticMeshComponent_IsVisibleInEditor(UStaticMeshComponent* Self)
	{
		return Self->IsVisibleInEditor();
	}
	DOTNET_EXPORT auto E_UStaticMeshComponent_OnChildAttached(UStaticMeshComponent* Self, USceneComponent* ChildComponent)
	{
		auto _p0 = ChildComponent;
		((E_PROTECTED_WRAP_UStaticMeshComponent*)Self)->OnChildAttached_WRAP(_p0);
	}
	DOTNET_EXPORT auto E_UStaticMeshComponent_OnChildDetached(UStaticMeshComponent* Self, USceneComponent* ChildComponent)
	{
		auto _p0 = ChildComponent;
		((E_PROTECTED_WRAP_UStaticMeshComponent*)Self)->OnChildDetached_WRAP(_p0);
	}
	DOTNET_EXPORT auto E_UStaticMeshComponent_OnHiddenInGameChanged(UStaticMeshComponent* Self)
	{
		((E_PROTECTED_WRAP_UStaticMeshComponent*)Self)->OnHiddenInGameChanged_WRAP();
	}
	DOTNET_EXPORT auto E_UStaticMeshComponent_OnVisibilityChanged(UStaticMeshComponent* Self)
	{
		((E_PROTECTED_WRAP_UStaticMeshComponent*)Self)->OnVisibilityChanged_WRAP();
	}
	DOTNET_EXPORT auto E_UStaticMeshComponent_PostNetReceive(UStaticMeshComponent* Self)
	{
		Self->PostNetReceive();
	}
	DOTNET_EXPORT auto E_UStaticMeshComponent_PostRepNotifies(UStaticMeshComponent* Self)
	{
		Self->PostRepNotifies();
	}
	DOTNET_EXPORT auto E_UStaticMeshComponent_PreNetReceive(UStaticMeshComponent* Self)
	{
		Self->PreNetReceive();
	}
	DOTNET_EXPORT auto E_UStaticMeshComponent_SetRelativeScale3D(UStaticMeshComponent* Self, INT_PTR NewScale3D)
	{
		auto _p0 = *(FVector*)NewScale3D;
		Self->SetRelativeScale3D(_p0);
	}
	DOTNET_EXPORT auto E_UStaticMeshComponent_ShouldCreateRenderState(UStaticMeshComponent* Self)
	{
		return Self->ShouldCreateRenderState();
	}
	DOTNET_EXPORT auto E_UStaticMeshComponent_Activate(UStaticMeshComponent* Self, bool bReset)
	{
		auto _p0 = bReset;
		Self->Activate(_p0);
	}
	DOTNET_EXPORT auto E_UStaticMeshComponent_AddTickPrerequisiteActor(UStaticMeshComponent* Self, AActor* PrerequisiteActor)
	{
		auto _p0 = PrerequisiteActor;
		Self->AddTickPrerequisiteActor(_p0);
	}
	DOTNET_EXPORT auto E_UStaticMeshComponent_AddTickPrerequisiteComponent(UStaticMeshComponent* Self, UActorComponent* PrerequisiteComponent)
	{
		auto _p0 = PrerequisiteComponent;
		Self->AddTickPrerequisiteComponent(_p0);
	}
	DOTNET_EXPORT auto E_UStaticMeshComponent_Deactivate(UStaticMeshComponent* Self)
	{
		Self->Deactivate();
	}
	DOTNET_EXPORT auto E_UStaticMeshComponent_GetComponentClassCanReplicate(UStaticMeshComponent* Self)
	{
		return Self->GetComponentClassCanReplicate();
	}
	DOTNET_EXPORT auto E_UStaticMeshComponent_GetReadableName(UStaticMeshComponent* Self)
	{
		return ConvertToManage_StringWrapper(Self->GetReadableName());
	}
	DOTNET_EXPORT auto E_UStaticMeshComponent_InitializeComponent(UStaticMeshComponent* Self)
	{
		Self->InitializeComponent();
	}
	DOTNET_EXPORT auto E_UStaticMeshComponent_IsActive(UStaticMeshComponent* Self)
	{
		return Self->IsActive();
	}
	DOTNET_EXPORT auto E_UStaticMeshComponent_IsNameStableForNetworking(UStaticMeshComponent* Self)
	{
		return Self->IsNameStableForNetworking();
	}
	DOTNET_EXPORT auto E_UStaticMeshComponent_IsReadyForOwnerToAutoDestroy(UStaticMeshComponent* Self)
	{
		return Self->IsReadyForOwnerToAutoDestroy();
	}
	DOTNET_EXPORT auto E_UStaticMeshComponent_IsSupportedForNetworking(UStaticMeshComponent* Self)
	{
		return Self->IsSupportedForNetworking();
	}
	DOTNET_EXPORT auto E_UStaticMeshComponent_MarkAsEditorOnlySubobject(UStaticMeshComponent* Self)
	{
		Self->MarkAsEditorOnlySubobject();
	}
	DOTNET_EXPORT auto E_UStaticMeshComponent_NeedsLoadForEditorGame(UStaticMeshComponent* Self)
	{
		return Self->NeedsLoadForEditorGame();
	}
	DOTNET_EXPORT auto E_UStaticMeshComponent_OnComponentCreated(UStaticMeshComponent* Self)
	{
		Self->OnComponentCreated();
	}
	DOTNET_EXPORT auto E_UStaticMeshComponent_PostRename(UStaticMeshComponent* Self, UObject* OldOuter, char* OldName)
	{
		auto _p0 = OldOuter;
		auto _p1 = ConvertFromManage_FName(OldName);
		Self->PostRename(_p0, _p1);
	}
	DOTNET_EXPORT auto E_UStaticMeshComponent_RemoveTickPrerequisiteActor(UStaticMeshComponent* Self, AActor* PrerequisiteActor)
	{
		auto _p0 = PrerequisiteActor;
		Self->RemoveTickPrerequisiteActor(_p0);
	}
	DOTNET_EXPORT auto E_UStaticMeshComponent_RemoveTickPrerequisiteComponent(UStaticMeshComponent* Self, UActorComponent* PrerequisiteComponent)
	{
		auto _p0 = PrerequisiteComponent;
		Self->RemoveTickPrerequisiteComponent(_p0);
	}
	DOTNET_EXPORT auto E_UStaticMeshComponent_RequiresGameThreadEndOfFrameRecreate(UStaticMeshComponent* Self)
	{
		return Self->RequiresGameThreadEndOfFrameRecreate();
	}
	DOTNET_EXPORT auto E_UStaticMeshComponent_RequiresGameThreadEndOfFrameUpdates(UStaticMeshComponent* Self)
	{
		return Self->RequiresGameThreadEndOfFrameUpdates();
	}
	DOTNET_EXPORT auto E_UStaticMeshComponent_SendRenderDynamicData_Concurrent(UStaticMeshComponent* Self)
	{
		((E_PROTECTED_WRAP_UStaticMeshComponent*)Self)->SendRenderDynamicData_Concurrent_WRAP();
	}
	DOTNET_EXPORT auto E_UStaticMeshComponent_SetActive(UStaticMeshComponent* Self, bool bNewActive, bool bReset)
	{
		auto _p0 = bNewActive;
		auto _p1 = bReset;
		Self->SetActive(_p0, _p1);
	}
	DOTNET_EXPORT auto E_UStaticMeshComponent_SetAutoActivate(UStaticMeshComponent* Self, bool bNewAutoActivate)
	{
		auto _p0 = bNewAutoActivate;
		Self->SetAutoActivate(_p0);
	}
	DOTNET_EXPORT auto E_UStaticMeshComponent_SetComponentTickEnabled(UStaticMeshComponent* Self, bool bEnabled)
	{
		auto _p0 = bEnabled;
		Self->SetComponentTickEnabled(_p0);
	}
	DOTNET_EXPORT auto E_UStaticMeshComponent_SetComponentTickEnabledAsync(UStaticMeshComponent* Self, bool bEnabled)
	{
		auto _p0 = bEnabled;
		Self->SetComponentTickEnabledAsync(_p0);
	}
	DOTNET_EXPORT auto E_UStaticMeshComponent_ShouldActivate(UStaticMeshComponent* Self)
	{
		return ((E_PROTECTED_WRAP_UStaticMeshComponent*)Self)->ShouldActivate_WRAP();
	}
	DOTNET_EXPORT auto E_UStaticMeshComponent_ToggleActive(UStaticMeshComponent* Self)
	{
		Self->ToggleActive();
	}
	DOTNET_EXPORT auto E_UStaticMeshComponent_UninitializeComponent(UStaticMeshComponent* Self)
	{
		Self->UninitializeComponent();
	}
	DOTNET_EXPORT auto E_UStaticMeshComponent_CheckDefaultSubobjectsInternal(UStaticMeshComponent* Self)
	{
		return Self->CheckDefaultSubobjectsInternal();
	}
	DOTNET_EXPORT auto E_UStaticMeshComponent_GetDesc(UStaticMeshComponent* Self)
	{
		return ConvertToManage_StringWrapper(Self->GetDesc());
	}
	DOTNET_EXPORT auto E_UStaticMeshComponent_IsAsset(UStaticMeshComponent* Self)
	{
		return Self->IsAsset();
	}
	DOTNET_EXPORT auto E_UStaticMeshComponent_IsFullNameStableForNetworking(UStaticMeshComponent* Self)
	{
		return Self->IsFullNameStableForNetworking();
	}
	DOTNET_EXPORT auto E_UStaticMeshComponent_IsLocalizedResource(UStaticMeshComponent* Self)
	{
		return Self->IsLocalizedResource();
	}
	DOTNET_EXPORT auto E_UStaticMeshComponent_IsPostLoadThreadSafe(UStaticMeshComponent* Self)
	{
		return Self->IsPostLoadThreadSafe();
	}
	DOTNET_EXPORT auto E_UStaticMeshComponent_IsSafeForRootSet(UStaticMeshComponent* Self)
	{
		return Self->IsSafeForRootSet();
	}
	DOTNET_EXPORT auto E_UStaticMeshComponent_Modify(UStaticMeshComponent* Self, bool bAlwaysMarkDirty)
	{
		auto _p0 = bAlwaysMarkDirty;
		return Self->Modify(_p0);
	}
	DOTNET_EXPORT auto E_UStaticMeshComponent_PostCDOContruct(UStaticMeshComponent* Self)
	{
		Self->PostCDOContruct();
	}
	DOTNET_EXPORT auto E_UStaticMeshComponent_PostEditImport(UStaticMeshComponent* Self)
	{
		Self->PostEditImport();
	}
	DOTNET_EXPORT auto E_UStaticMeshComponent_PostSaveRoot(UStaticMeshComponent* Self, bool bCleanupIsRequired)
	{
		auto _p0 = bCleanupIsRequired;
		Self->PostSaveRoot(_p0);
	}
	DOTNET_EXPORT auto E_UStaticMeshComponent_PreDestroyFromReplication(UStaticMeshComponent* Self)
	{
		Self->PreDestroyFromReplication();
	}
	DOTNET_EXPORT auto E_UStaticMeshComponent_ShutdownAfterError(UStaticMeshComponent* Self)
	{
		Self->ShutdownAfterError();
	}
	DOTNET_EXPORT auto E_UStaticMeshComponent_AddToCluster(UStaticMeshComponent* Self, UObjectBaseUtility* ClusterRootOrObjectFromCluster, bool bAddAsMutableObject)
	{
		auto _p0 = ClusterRootOrObjectFromCluster;
		auto _p1 = bAddAsMutableObject;
		Self->AddToCluster(_p0, _p1);
	}
	DOTNET_EXPORT auto E_UStaticMeshComponent_CanBeClusterRoot(UStaticMeshComponent* Self)
	{
		return Self->CanBeClusterRoot();
	}
	DOTNET_EXPORT auto E_UStaticMeshComponent_CanBeInCluster(UStaticMeshComponent* Self)
	{
		return Self->CanBeInCluster();
	}